# archie

./: .gitignore  CLAUDE.md  archie.ipynb  cv_loss.py  dataset.py  embedding.ipynb  inference.py  mistral.ipynb  mistral_model.py  perplexity.py  plot.ipynb  pyproject.toml  surgery.py  test.py  test_model.py
archie/: __init__.py  __main__.py  checkpoint.py  config.py  configs.toml  inference.py  mistral.py  model.py  tokenizer.py
archie/training/: __init__.py  data.py
docs/plans/: 2026-02-22-lm-eval-evaluate-design.md
