[project]
name = "byte-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=1.4.1",
    "rich>=14.3.2",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "requests>=2.31.0",
    # Plotting
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
    "openai-harmony>=0.0.8",
    "textual>=0.47.1",
    "torchviz>=0.0.3",
    "transformers>=5.1.0",
    "peft>=0.18.1",
    "wandb>=0.24.2",
    "nbformat>=5.10.4",
    "jsonlines>=4.0.0",
    "scikit-learn>=1.8.0",
    "lm-eval>=0.4.0",
]
